--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/websiteicon.png" />
+  <meta property="og:image" href="%PUBLIC_URL%/share_pic.png">
+  <meta property="og:description" content="Lista celów, które chcemy zrealizować w nowym roku." />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
